--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ a:focus {
 .nav-bar .navbar {
     height: 100%;
     /*background: #030f27 !important;¨*/
-    background: #27cf40 !important;
+    background: #030f27 !important;
 }
 
 .navbar-dark .navbar-nav .nav-link,
