--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,8 @@ a:focus {
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, .3);
+    /*background: rgba(0, 0, 0, .3);*/
+    background: rgba(90, 90, 90, 0.3);
     z-index: 1;
 }
 
@@ -1979,7 +1980,7 @@ a:focus {
     display: flex;
     align-items: center;
     height: 60px;
-    background: #030f27;
+    background: #86da3c;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -1991,7 +1992,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #030f27;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
@@ -2009,7 +2010,7 @@ a:focus {
     line-height: 60px;
     font-weight: 100;
     color: #030f27;
-    background: #ffffff;
+    background: #fdbe33;
     border-radius: 0;
     transition: .3s;
 }
@@ -2017,6 +2018,85 @@ a:focus {
 .portfolio .portfolio-warp:hover a.btn {
     color: #ffffff;
     background: #fdbe33;
+}
+
+
+.portfolio .portfolio-img video {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.portfolio .play-btn {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+  background: #fdbe33;
+  color: #030f27;
+  transition: .3s;
+}
+
+.portfolio .play-btn:hover {
+  background: #030f27;
+  color: #fff;
+}
+
+.portfoliovideo-text {
+  max-width: 400px; /* Tamaño máximo como tu video */
+  width: 100%; /* Escalable */
+  margin: 0 auto; /* Centrado horizontal */
+  display: flex;
+  align-items: center;
+  height: 60px;
+  background: #86da3c;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.portfoliovideo-text h3 {
+  margin: 0;
+  padding: 0 15px 0 25px;
+  width: calc(100% - 60px);
+  font-size: 20px;
+  font-weight: 700;
+  color: #030f27;
+  text-align: center;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.portfoliovideo-text a.btn {
+  width: 60px;
+  height: 60px;
+  padding: 3px 0 0 3px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px; /* icono play más compacto */
+  line-height: 60px;
+  color: #030f27;
+  background: #fdbe33;
+  border-radius: 0;
+  transition: .3s;
+}
+
+.portfoliovideo-text a.btn:hover {
+  background: #030f27;
+  color: #fff;
+}
+
+/* Asegura que el contenedor del video sea responsive */
+.portfolio-img {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 
